Fixing spacing with a little bit of help from chatgpt. Had to go very slowly since most of the major changes it recommended broke things.

--- a/css/main.css
+++ b/css/main.css
@@ -8,18 +8,21 @@
     position: relative;
     /* min-height: calc(100vh - 3.3em); */
     min-height: calc(100svh - 8.8em);
-    
+    flex: 1;
+    padding-bottom: 2em;    
 }
 
  /* #content-wrap {
     padding-bottom: 5.5rem; /* Footer height *
 }    */
 
+
 #footer {
-    margin: 0 .9em -1em .9em;
-    position: absolute;
+    margin: 0 .9em 0 .9em;
+    /* position: absolute; */
     font-size: 1.1em;
     bottom: 1em;
+    padding: 8em 0 0 0;
     color: rgb(180, 180, 180);
 }
 
@@ -28,23 +31,27 @@ body{
     /* background-color: #307D99; */
     background-image: url('../images/swing-bg.JPG');
     background-size: cover;
+    background-position: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 1em;
     margin: 0;
     min-height: fit-content;
     color: white;
     scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
     /* min-height: 5svh; */
-    background: white;
+    background: linear-gradient(White,gray);
     padding: .7em;
 }
 
 .tdc-logo {
     max-height: 3.2rem;
     padding: 0 0 0 2%;
+
 }
 
 .gen-link:link, .gen-link:visited {
@@ -76,7 +83,7 @@ header {
     content: ' ';
     position: absolute;
     border-radius: 35px;
-    background: rgba(128, 60, 5, 0.6);
+    background: linear-gradient(black,black,rgba(31, 31, 31, 0.699));
     z-index: -1;
     inset: 0;
 }
@@ -92,7 +99,10 @@ header {
 .swing {
     font-size: 1.3em;
     position: relative;
-    margin: 15% 10% 0 10%;
+    width: 80%;
+    max-width: 600px;
+    margin: 15% 15% 0;
+    /* margin: 15% 10% 0 10%; */
     z-index: 4;
     color: white;
     font-size-adjust: none;
@@ -110,11 +120,10 @@ header {
     transform: skew(-10deg);
     background: rgba(128, 60, 5, 0.6);
     height: 3em;
-    bottom: 0;
+    bottom: -1em;
     z-index: -1;
     margin: 0 0 .2em -1.1em;
 }
-
 
 
 
@@ -152,150 +161,14 @@ header {
     .swing::before {
         content: ' ';
         position: absolute;
-        width: 75vw;
-        border-radius: 5px;
-        transform: skew(-10deg);
-        background: rgba(128, 60, 5, 0.6);
-        height: 2em;
-        bottom: 0;
-        z-index: -1;
-        margin: -2.2% -37.5%;
-    }
-}
-
-
-/* 
-@media (max-width: 1200px) {
-
-    .intro::before {
-        box-sizing: border-box;
-        content: ' ';
-        position: absolute;
-        width: 30em;
-        border-radius: 35px;
-        background: rgba(128, 60, 5, 0.6);
-        height: 15em;
-        top: 0%;
-        right: -30%;
-        z-index: -1;
-        margin: 0 0 .2em -1.1em;
-    }
-    
-    .tonyheadshot {
-        position: relative;
-        margin: 15% 0% 0% 0%;
-        z-index: 1;
-        min-width: 25vw;
-        border-radius: 200px;
-    }
-}
-
-
-
-@media (max-width: 960px) {
-
-    .intro::before {
-        box-sizing: border-box;
-        content: ' ';
-        position: absolute;
-        width: 30em;
-        border-radius: 35px;
-        background: rgba(128, 60, 5, 0.6);
-        height: 15em;
-        top: 0%;
-        right: -30%;
-        z-index: -1;
-        margin: 0 0 .2em -1.1em;
-    }
-    
-    .tonyheadshot {
-        min-width: 25vw;
-        position: relative;
-        margin: 15% 0% 0% 0%;
-        z-index: 1;
-        border-radius: 200px;
-    }
-}
-
-
-
-
-@media  (max-width: 768px){
-
-    body {
-    margin: 0px 0 100px 0;
-    } 
-   
-    .header {
-        min-height: 900px;
-    }
-
-
-    .footer {
-        position: fixed;
-        bottom: 0%;
-    }
-
-    .intro {
-        box-sizing: border-box;
-        text-align: center;
-        font-size: 1em;
-        position: absolute;
-        margin: 10% 0 0 28%;
-        top: 8%;
-        z-index: 1;
-        color: white;
-    }
-    
-    .intro::before {
-        box-sizing: border-box;
-        content: ' ';
-        position: absolute;
-        width: 25rem;
-        border-radius: 35px;
-        background: rgba(128, 60, 5, 0.6);
-        height: 18em;
-        top: -5%;
-        right: -16%;
-        z-index: -1;
-        margin: 0 0 .2em -1.1em;
-    }
-
-    .tonyheadshot {
-
-        position: relative;
-        margin: 25% 0% 0% 0%;
-        z-index: 1;
-        min-width: 35vw;
-        border-radius: 200px;
-
-    }
-
-    .swing {
-        box-sizing: border-box;
-        font-size: 1.5em;
-        position: absolute;
-        bottom: 5%;
-        left: 20%;
-        z-index: 4;
-        color: white;
-        font-size-adjust: none;
-        margin: 50 0 50 0;
-        padding: 50 0 50 0;
-    }
-    .swing::before {
-        box-sizing: border-box;
-        content: ' ';
-        position: absolute;
-        width: 14em;
-        border-radius: 5px;
-        transform: skew(-10deg);
-        background: rgba(128, 60, 5, 0.6);
+        width: 14em;    
         height: 3em;
-        bottom: 0;
+        border-radius: 5px;
+        background: rgba(128, 60, 5, 0.6);
+        bottom: -1em;
+        left: 52.5%;
+        transform: translateX(-47.5%) skew(-10deg);
         z-index: -1;
-        margin: 10em 0 0 -1.1em;
+        /* margin: 0 0 .2em -1.1em; */
     }
-    
-
-}  */
+}
